--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,29 @@
   margin: 0.5em; /* Space between circles if necessary */
   /* Additional circle styling as needed */
 }
+
+
+/* Positions for each circle to form the ring */
+.circle:nth-child(1), .selected_circle:nth-child(1) { /* First circle */
+  top: 0;
+  left: 0%;
+  transform: translate(-50%, -100%);
+}
+
+.circle:nth-child(2) { /* Second circle */
+  top: -50px;
+  right: 70%;
+  transform: translate(100%, -50%);
+}
+
+.circle:nth-child(3) { /* Third circle */
+  bottom: 70px;
+  left: -40%;
+  transform: translate(-50%, 100%);
+}
+
+.circle:nth-child(4) { /* Fourth circle */
+  top: -140px;
+  left: 30%;
+  transform: translate(-100%, -50%);
+}
