--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 :root {
   font-family: 'General Sans', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -26,6 +35,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow: hidden;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 h1 {
